# deep-research

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
deep_research/: __init__.py  api.py  auto_tuning.py  content_classifier.py  engine.py  llm.py  memory.py  models.py  progress.py  prompts.py  reporting.py  run.py
deep_research/search_engines/bing/: bing.py
deep_research/search_engines/duckduckgo/: duckduckgo.py
deep_research/search_engines/tavily/: tavily_search.py
deep_research/utils/: logger.py  text_splitter.py
examples/: README.md  advanced_research_session.py  basic_research.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_auto_tuning.py  test_content_classifier.py  test_engine.py  test_memory.py  test_models.py  test_progress.py  test_reporting.py
