[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research"
version = "1.0.0"
description = "An automated multi-step research system with iterative refinement, source evaluation, and result synthesis"
readme = "README.md"
authors = [
    {name = "Moshe Anconina", email = "anconina@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.6.0",
    "litellm>=1.0.0",
    "firecrawl>=0.1.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "typing-extensions>=4.7.0",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "tenacity>=8.2.2",
    "jsonschema>=4.19.0",
    "duckduckgo-search (>=7.5.1,<8.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/yourusername/deep-research"
"Bug Tracker" = "https://github.com/yourusername/deep-research/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
    "tox>=4.6.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.2",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"